fix: fix icon alignment

--- a/packages/ui/src/styles/utilities/text.css
+++ b/packages/ui/src/styles/utilities/text.css
@@ -19,8 +19,6 @@
   font-size: var(--acv-font-size-accent);
   line-height: var(--acv-font-line-height-regular);
   font-weight: var(--acv-font-weight-regular);
-  display: inline-flex;
-  align-items: center;
 }
 
 /**
